[tool.poetry]
name = "distillation"
version = "0.1.0"
description = ""
authors = ["Golovin Pavel <gopavel0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
tqdm = "^4.60.0"
torch = "^1.8.1"
lets-plot = "^2.0.2"
scikit-learn = "^0.24.2"
torchvision = "^0.9.1"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
